# lambda-with-terraform

./: .terraform.lock.hcl  README.md  main.tf
kinesis-consumer/: .gitignore  main.tf
kinesis-consumer/kinesis-lambda/: Cargo.toml
kinesis-consumer/kinesis-lambda/src/: main.rs
sample/: hello.py
