[package]
name = "data_streamer"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use cargo add to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the add subcommand.
#
# Running cargo add DEPENDENCY_NAME will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5.4"
aws-sdk-sqs = "1.36.0"
aws_lambda_events = "0.15.1"
base64 = "0.22.1"
lambda_runtime = "0.13.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = "1.39.2"
chrono = "0.4"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "env-filter",
] }

[dev-dependencies]
rstest = "0.22.0"
